--- a/src/components/Reasons.jsx/style.css
+++ b/src/components/Reasons.jsx/style.css
@@ -1,7 +1,6 @@
 .reasons {
   padding: 0 3rem;
   display: flex;
-  grid-template:  2rem;
   gap: 2rem;
 }
 
@@ -18,34 +17,77 @@
 }
 
 .left-r>:nth-child(1) {
-  width: 12rem;
+  width: 20rem;
   grid-row: 1/3;
-  height: 29rem;
+  height: 49rem;
 }
 
 .left-r>:nth-child(2) {
-  width: auto;
-  height: 16rem;
+  width: 46rem;
+  height: 25rem;
   grid-column: 2/4  ;
 }
 
 .left-r>:nth-child(3) {
-  width: 14rem;
+  width: 22.5rem;
+  height: 22.5rem;
   grid-column: 2/3;
   grid-row: 2 ;
 }
 
 .left-r>:nth-child(4) {
-  width: 10rem;
+  width: 22rem;
+  height: 22.5rem;
   grid-row: 2;
   grid-column: 3/4;
   flex-direction: column;
-  height: 11.2rem;
+  height: 22.5rem;
 }
 
 .right-r {
   flex: 1 1 ;
   text-transform: uppercase;
   gap: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
+.right-r>span {
+  font-weight: bold;
+  color: var(--orange);
+  font-size: 2rem;
+}
+
+.right-r>div {
+  color: #fff;
+  font-size: 5rem;
+  font-weight: bold;
+}
+
+.details-r {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.details-r>div {
+  display: flex;
+  align-items: center;
+  font-size: 2.2rem;
+  gap: 1rem;
+}
+
+.details-r>div>img {
+  width: 4rem;
+  height: 4rem;
+  
+}
+
+.partners {
+  display: flex;
+  gap: 1.5rem;
+  font-size: 3rem;
+}
+
+.partners>img {
+  width: 6rem;
+}
