--- a/src/components/Depoimentos/style.css
+++ b/src/components/Depoimentos/style.css
@@ -2,6 +2,7 @@
   display: flex;
   gap: 1rem;
   padding: 0 2rem;
+  height: 50rem;
 }
 
 .left-t {
@@ -13,17 +14,28 @@
   color: #fff;
 }
 
+.left-t>:nth-child(1) {
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: .2rem;
+}
+
 .left-t>:nth-child(2),
 .left-t>:nth-child(3) {
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 5rem;
 }
 
 .left-t>:nth-child(4){
   text-transform: none;
   text-align: justify;
   letter-spacing: .2rem;
-  line-height: 4rem;
+  line-height: 3rem;
+  font-size: 1.8rem;
+}
+
+.left-t>:nth-child(5) {
+  font-size: 1.4rem;
 }
 
 .right-t {
@@ -33,9 +45,41 @@
 
 .right-t>img {
   position: absolute;
-  width: 30rem;
-  height: 33rem;
+  width: 29rem;
+  height: 32rem;
   object-fit: cover;
-  right: 38rem;
+  right: 15rem;
   top: 2rem;
+}
+
+.right-t>:nth-child(1) {
+  border: .2rem solid #ffa500;
+  position: absolute;
+  width: 29rem;
+  height: 32rem;
+  background-color: transparent;
+  right: 17rem;
+  top: .9rem;
+}
+
+.right-t>:nth-child(2) {
+  position: absolute;
+  width: 29rem;
+  height: 32rem;
+  right: 13rem;
+  top: 4rem;
+  background: var(--planCard);
+}
+
+.arrows {
+  display: flex;
+  gap: 2rem;
+  position: absolute;
+  top: 35rem;
+  right: 70rem;
+}
+
+.arrows>img {
+  width: 2rem;
+  cursor: pointer;
 }
