--- a/src/components/Plano/style.css
+++ b/src/components/Plano/style.css
@@ -5,7 +5,20 @@
   flex-direction: column;
   gap: 4rem;
   position: relative;
+}
 
+.plans-blur-1 {
+  width: 32rem;
+  height: 23rem;
+  top: 6rem;
+  left: 0;
+}
+
+.plans-blur-2 {
+  width: 32rem;
+  height: 23rem;
+  top: 10rem;
+  right: 0;
 }
 
 .programs-header>span {
@@ -25,9 +38,10 @@
   flex-direction: column;
   background: var(--caloryCard);
   color: #fff;
-  gap: 2rem;
+  gap: 3.5rem;
   padding: 1.5rem;
   width: 30rem;
+  height: 40rem;
   box-shadow: .1rem .1rem 1.5rem var(--orange);
 }
 
